--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
-    "start:prod": "pm2 start dist/index.js --name we-care"
+    "start:prod": "pm2 start dist/index.js --name we-care",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "prepare": "husky"
   },
   "author": "azhar-siddiqui",
   "license": "ISC",
@@ -16,13 +19,25 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.4.1",
+    "globals": "^16.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.1"
   }
 }
